fix landing page spacing on deployed site

--- a/heart/client/src/components/landing/timer/Timer.css
+++ b/heart/client/src/components/landing/timer/Timer.css
@@ -1,5 +1,5 @@
 #timer-container {
-  height: calc(100vh - 200px);
+  height: calc(100vh - 150px);
   width: 100vw;
   display: flex;
   flex-direction: column;
